2009-01-28  John W. Eaton  <jwe@octave.org>

	* Makefile.in (install, uninstall): Handle SHLLIBPRE and SHLBINPRE
	library prefixes.  From Marco Atzeri <marco_atzeri@yahoo.it>.

2008-01-28  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/regexp.cc (octregexp_list): Don't break for zero
	length match, but rather advance the index by one character and
	try again.

2009-01-28  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/lookup.cc (Flookup): Fix doc string.

2009-01-27  John W. Eaton  <jwe@octave.org>

	* load-path.cc (Fcommand_line_path): Rename from Fcommandlinepath.

2009-01-27 Ben Abbott <bpabbott@mac.com>

	* graphics.cc (convert_position): Handle character units.
	(default_axes_tick, default_figure_papersize,
	default_figure_paperposition): New functions.
	* graphics.h.in (class figure::properties): Use them to
	initialize papersize, paperposition, xtick, ytick, and ztick
	properties.

2009-01-27  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/qr.cc (Fqr): Treat empty matrices correctly.

2009-01-26  Thomas Treichl  <Thomas.Treichl@gmx.net>

	* display.cc (display_info::init): Use double instead of CGFloat.
	Use HAVE_FRAMEWORK_CARBON instead of OCTAVE_USE_OS_X_API.

2009-01-26  John W. Eaton  <jwe@octave.org>

	* load-path.cc (load_path::do_find_fcn): Handle @foo/bar.

2009-01-24  Jaroslav Hajek  <highegg@gmail.com>

	* pt-cell.cc (tree_cell::rvalue): Optimize the single row case.

2009-01-24  Jaroslav Hajek  <highegg@gmail.com>

	* ov-struct.cc (octave_struct::subsasgn): Reshape cs-list on rhs 
	according to the index expression.
	* ov-cell.cc (octave_cell::subsasgn): Dtto.

2008-12-25 Ben Abbott <bpabbott@mac.com>

	* load-path.cc (Fcommandlinepath): New function.
	* load-path.h (load_path::get_command_line_path,
	load_path::do_get_command_line_path): New functions.

2009-01-24 Ben Abbott <bpabbott@mac.com>

	* DLD-FUNCTIONS/eigs.cc: eigs.cc: skip tests if ARPACK is missing.

2009-01-23  John W. Eaton  <jwe@octave.org>
